--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ app.copyright=2017
 server.port=8081
 
 #数据库配置
-jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/shop
 jdbc.username=root
-jdbc.password=root
+jdbc.password=123456
 
 #jdbc.driverClassName=org.hsqldb.jdbcDriver
 #jdbc.url=jdbc:hsqldb:mem:shop
